objects/SDO_OMS_Link_Order_Summary__c.object
<CustomObject>
    <description>What: OMS - Custom Junction Object to show Order Summaries on Person Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summaries</relationshipLabel>
        <relationshipName>Order_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Summary__c</fullName>
        <label>Order Summary</label>
        <referenceTo>OrderSummary</referenceTo>
        <relationshipLabel>Order Summaries</relationshipLabel>
        <relationshipName>Order_Summaries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Link Order Summary</label>
    <nameField>
        <displayFormat>OS-{000000}</displayFormat>
        <label>Link Order Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Link Order Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>